torchserve/deployment_torchserve.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-torchserve
  labels:
    app: torchserve
  namespace: torchserve-cluster  # Set the desired namespace here
spec:
  replicas: 1
  selector:
    matchLabels:
      app: torchserve
  template:
    metadata:
      labels:
        app: torchserve
    spec:
      containers:
        - name: torchserve
     
          image: pytorch/torchserve:latest
          ports:
            - containerPort: 8080
            - containerPort: 8081
            - containerPort: 8082
          volumeMounts:
            - name: shared-storage
              mountPath: /home/model-server/shared/
              
          readinessProbe:
            httpGet:
              path: /ping
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: pv-claim-nfs
