torchserve/service_torchserve.yaml
apiVersion: v1
kind: Service
metadata:
  name: torchserve-service
  labels:
    name: torchserve
  namespace: torchserve-cluster  # Set the desired namespace here
spec:
  # ClusterIP is the default ServiceType and selected here explicitly for clarity (Used for internal communication only)
  type: ClusterIP
  selector:
    app: torchserve
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: inference
    - protocol: TCP
      port: 8081
      targetPort: 8081
      name: management
    - protocol: TCP
      port: 8082
      targetPort: 8082
      name: metrics
