torchserve/ingress_management_torchserve.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress-management-torchserve
  namespace: torchserve-cluster
spec:
  rules:
  # create a rule for the ManagementAPI endpoint -> torchserve-IP:8081/
  - host: torchserve-management.YOUR_NODE_IP.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: torchserve-service
            port:
              number: 8081
