torchserve/ingress_predictions_torchserve.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress-predictions-torchserve
  namespace: torchserve-cluster
spec:
  rules:
  # create a rule for InferenceAPI endpoint -> torchserve-IP:8080/
  - host: torchserve-predictions.YOUR_NODE_IP.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: torchserve-service
            port:
              number: 8080
